--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,10 +9,12 @@ asn1crypto==1.5.1
 asttokens==2.0.7
 async-timeout==4.0.2
 attrs==22.1.0
+Babel==2.10.3
 backcall==0.2.0
 backoff==1.10.0
 backports.zoneinfo==0.2.1
 base58==2.1.1
+bases==0.2.1
 bcrypt==3.2.2
 beautifulsoup4==4.11.1
 bitarray==2.6.0
@@ -21,7 +23,7 @@ blinker==1.5
 cachetools==5.2.0
 certifi==2022.6.15
 cffi==1.15.1
-charset-normalizer==2.1.0
+charset-normalizer==2.0.12
 click==8.0.4
 coincurve==15.0.1
 coloredlogs==15.0.1
@@ -29,6 +31,7 @@ commonmark==0.9.1
 cryptography==3.3.2
 cycler==0.11.0
 cytoolz==0.12.0
+dag-cbor==0.2.2
 datasets==2.4.0
 debugpy==1.6.2
 decorator==5.1.1
@@ -50,6 +53,7 @@ eth-typing==2.3.0
 eth-utils==1.9.5
 executing==0.10.0
 fastapi==0.79.0
+fastcore==1.5.22
 fastjsonschema==2.16.1
 ffmpy==0.3.0
 filelock==3.8.0
@@ -67,20 +71,26 @@ httpx==0.23.0
 huggingface-hub==0.8.1
 humanfriendly==10.0
 idna==3.3
+imageio==2.21.2
 importlib-metadata==4.12.0
-ipfshttpclient==0.8.0a2
+ipfshttpclient>=0.7.0
 ipykernel==6.15.1
 ipython==8.4.0
 ipython-genutils==0.2.0
 ipywidgets==7.7.1
 jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.1.0
 json-sempai==0.4.0
+json5==0.9.10
 jsonschema==3.2.0
 jupyter-client==7.3.4
 jupyter-core==4.11.1
+jupyter-server==1.18.1
+jupyterlab==3.4.5
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.1
+jupyterlab_server==2.15.1
 kiwisolver==1.4.4
 linkify-it-py==1.0.3
 lru-dict==1.1.8
@@ -96,13 +106,16 @@ monotonic==1.6
 msgpack==1.0.4
 multiaddr==0.0.9
 multidict==6.0.2
+multiformats==0.1.4.post2
 multiprocess==0.70.13
+nbclassic==0.4.3
 nbclient==0.6.6
 nbconvert==6.5.3
 nbformat==5.4.0
 nest-asyncio==1.5.5
 netaddr==0.8.0
 notebook==6.4.12
+notebook-shim==0.1.0
 numpy==1.23.1
 ocean-contracts==1.0.0
 orjson==3.7.11
@@ -116,6 +129,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
 platformdirs==2.5.2
+plotly==5.10.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
 protobuf==3.20.1
@@ -144,22 +158,26 @@ PyYAML==5.4.1
 pyzmq==23.2.1
 ray==1.13.0
 regex==2022.7.25
-requests==2.28.1
+requests==2.27.1
 responses==0.18.0
 rfc3986==1.5.0
 rich==12.5.1
 rlp==2.0.1
+scikit-learn==1.1.2
 scipy==1.9.0
 semver==2.13.0
 Send2Trash==1.8.0
 six==1.16.0
+sklearn==0.0
 smmap==5.0.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
 stack-data==0.4.0
 starlette==0.19.1
 streamlit==1.12.0
+tenacity==8.0.1
 terminado==0.15.0
+threadpoolctl==3.1.0
 tinycss2==1.1.1
 tokenizers==0.12.1
 toml==0.10.2
@@ -169,6 +187,7 @@ tornado==6.2
 tqdm==4.64.0
 traitlets==5.3.0
 transformers==4.21.1
+typing-validation==0.0.1.post7
 typing_extensions==4.3.0
 tzdata==2022.2
 tzlocal==4.2
@@ -182,10 +201,10 @@ watchdog==2.1.9
 wcwidth==0.2.5
 web3==5.28.0
 webencodings==0.5.1
+websocket-client==1.4.0
 websockets==9.1
 widgetsnbextension==3.6.1
 wrapt==1.14.1
 xxhash==3.0.0
 yarl==1.8.1
 zipp==3.8.1
-plotly
