--- a/backend/docker-compose-local.yml
+++ b/backend/docker-compose-local.yml
@@ -10,15 +10,25 @@ services:
     environment:
       - LOCAL_SUBTENSOR_HOST=subtensor
     ports:
-      - 5000:5000
+      # - 5000:5000
       - 8501-8506:8501-8506
       - 8080:8080
 
     volumes:
       - ./bittensor/bittensor:/app/bittensor/bittensor
-      - ./backend/commune:/app/commune
-      - ./backend/.bittensor:/root/.bittensor
+      - ./commune:/app/commune
+      - ./.bittensor:/root/.bittensor
+      - ./scripts:/app/scripts
 
-    entrypoint: 
-      ["tail", "-f", "/dev/null"]
+
+    deploy:
+      resources:
+         reservations:
+           devices:
+           - driver: nvidia
+             count: 'all'
+             capabilities: [gpu]
+
+    command: bash -c "chmod +x ./scripts/*;./scripts/startup.sh;"
+
   
