--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,4 +19,6 @@ RUN python3 -m pip install -U streamlit
 RUN python3 -m pip install -U gradio
 RUN python3 -m pip install -U plotly
 RUN python3 -m pip install -U sentence-transformers
+RUN python3 -m pip install -U datasets
+
 COPY ./scripts .
