--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,8 +12,12 @@ services:
     ports:
       # - 5000:5000
       - 8501-8505:8501-8505
-      - 8080:8080
-      - 8265:8265
+      - 8080:8080 # 
+      - 8265:8265 # ray dashboard 
+      - 7865-7870:7865-7870 # gradio ports
+      - 8000:8000 # api
+      - 8888:8888 # jupyterlab
+
 
     volumes:
       - ./bittensor/bittensor:/app/bittensor/bittensor
