--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 
 [submodule "backend/ocean.py"]
 	path = backend/ocean.py
-	url = https://github.com/AlgoveraAI/ocean.py.git
+	url = https://github.com/commune-ai/ocean.py.git
 	branch = wip/richard/input_dataset
 
 [submodule "backend/ipfspy"]
