--- a/backend/commune/bittensor/benchmark/module.yaml
+++ b/backend/commune/bittensor/benchmark/module.yaml
@@ -8,10 +8,12 @@ dataset:
   params:
     block_size: 10
 
+num_endpoints: 100
+
 model:
   path: commune.bittensor.benchmark.RankingModel
   params:
-    num_endpoints: 10
+    num_endpoints: local_copy(num_endpoints)
 
 synapses: ['bittensor.synapse.TextCausalLM']
 
@@ -29,14 +31,15 @@ receptor_pool:
   max_worker_threads: 64
   max_active_receptors: 512
 
-network: nobunaga
+# network: nobunaga
+network: nakamoto
 block: null
 blocks_behind_sync_threshold: 1000
 
 
 wallet: 
-  name: default
-  hotkey: default
+  name: const
+  hotkey: Tiberius
 
 actor:
   name: local_copy(module)
