--- a/backend/commune/bittensor/neuron/module.yaml
+++ b/backend/commune/bittensor/neuron/module.yaml
@@ -1,38 +1,11 @@
-module: 'BenchmarkModule'
+module: 'NeuronModule'
 # clients
 # client: get_config(client.manager)
 
 
-dataset:
-  path: bittensor.dataset
-  params:
-    block_size: 10
-
-model:
-  path: commune.bittensor.benchmark.RankingModel
-  params:
-    num_endpoints: 10
-
-synapses: ['bittensor.synapse.TextCausalLM']
-
-optimizer:
-  path: torch.optim.Adam
-  params:
-    lr: 0.00032
-
-metric:
-  path: commune.bittensor.benchmark.RankingLoss
-  params: {}
-
-
-receptor_pool:
-  max_worker_threads: 64
-  max_active_receptors: 512
-
 network: nobunaga
 block: null
 blocks_behind_sync_threshold: 1000
-
 
 wallet: 
   name: default
