local caching and new recepptor l2 module

--- a/backend/commune/bittensor/benchmark/module.yaml
+++ b/backend/commune/bittensor/benchmark/module.yaml
@@ -2,7 +2,7 @@ module: 'BenchmarkModule'
 # clients
 # client: get_config(client.manager)
 
-
+client: {}
 dataset:
   path: bittensor.dataset
   params:
