--- a/backend/commune/bittensor/receptor/pool/module.yaml
+++ b/backend/commune/bittensor/receptor/pool/module.yaml
@@ -1,16 +1,9 @@
-module: 'NeuronModule'
+module: 'ReceptorPoolModule'
 # clients
 # client: get_config(client.manager)
-
-
-network: nobunaga
-block: null
-blocks_behind_sync_threshold: 1000
-
-wallet: 
-  name: default
-  hotkey: default
 
 actor:
   name: local_copy(module)
   refresh: False
+
+
