added axon and graido additions

--- a/backend/commune/bittensor/benchmark/module.yaml
+++ b/backend/commune/bittensor/benchmark/module.yaml
@@ -29,7 +29,7 @@ model:
   params:
     num_endpoints: local_copy(num_endpoints)
 
-synapses: ['bittensor.synapse.TextCausalLM']
+synapses: ['TextLastHiddenState']
 
 optimizer:
   path: torch.optim.Adam
