--- a/backend/commune/bittensor/benchmark/module.yaml
+++ b/backend/commune/bittensor/benchmark/module.yaml
@@ -45,19 +45,19 @@ receptor_pool:
   max_worker_threads: 64
   max_active_receptors: 512
 
-network: nobunaga
-# network: nakamoto
+# network: nobunaga
+network: nakamoto
 block: null
 blocks_behind_sync_threshold: 1000
 
 
-# wallet: 
-#   name: const
-#   hotkey: Tiberius
-
 wallet: 
-  name: default
-  hotkey: default
+  name: const
+  hotkey: Tiberius
+
+# wallet: 
+#   name: default
+#   hotkey: default
 
 actor:
   name: local_copy(module)
