--- a/ModuleFlow/package.json
+++ b/ModuleFlow/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "dagre": "^0.8.5",
+    "elkjs": "^0.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.8",
