--- a/backend/commune/bittensor/cortex/base/module.yaml
+++ b/backend/commune/bittensor/cortex/base/module.yaml
@@ -1,12 +1,7 @@
-module: 'BenchmarkModule'
-# clients
-# client: get_config(client.manager)
+module: 'CortexModule'
 
 client: {}
-# dataset:
-#   path: bittensor.dataset
-#   params:
-#     block_size: 10
+
 
 dataset:
   path: datasets.load_dataset
@@ -25,11 +20,17 @@ tokenizer:
 num_endpoints: 100
 
 model:
-  path: commune.bittensor.benchmark.model.RankingModel
+  path: commune.bittensor.cortex.model.RankingModel
   params:
     num_endpoints: local_copy(num_endpoints)
 
-synapses: ['TextLastHiddenState']
+synapses: ['TextCausalLM']
+
+
+receptor_pool:
+  max_worker_threads: 64
+  max_active_receptors: 512
+
 
 optimizer:
   path: torch.optim.Adam
@@ -37,27 +38,23 @@ optimizer:
     lr: 0.00032
 
 metric:
-  path: commune.bittensor.benchmark.model.RankingLoss
-  params: {}
+  ranking_loss:
+    path: commune.bittensor.cortex.metric.RankingLoss
+    params: {}
+  causal_lm_loss:
+    path: commune.bittensor.cortex.metric.causal_lm_loss
+    params: {}
+  cross_entropy:
+    path: torch.nn.CrossEntropyLoss
+    params: {}
 
-
-receptor_pool:
-  max_worker_threads: 64
-  max_active_receptors: 512
-
-# network: nobunaga
 network: nakamoto
 block: null
 blocks_behind_sync_threshold: 1000
 
-
 wallet: 
   name: const
   hotkey: Tiberius
-
-# wallet: 
-#   name: default
-#   hotkey: default
 
 actor:
   name: local_copy(module)
