--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -31,7 +31,7 @@ RUN python3 -m pip install -e ./ipfspy
 ADD ./ipfsspec /app/ipfsspec
 RUN python3 -m pip install -e ./ipfsspec
 
-RUN python3 -m pip install torchsort
+# RUN python3 -m pip install torchsort
 
 COPY ./scripts .
 
