--- a/backend/commune/huggingface/dataset/module.yaml
+++ b/backend/commune/huggingface/dataset/module.yaml
@@ -9,13 +9,24 @@ submodule:
     actor : {refresh: False}
 
 
+# dataset:
+#   path: datasets.load_dataset
+#   params:
+#     path: glue
+#     name: cola
+#     split: [test, 'train']
+#   text_field: sentence
+
+
 dataset:
   path: datasets.load_dataset
   params:
-    path: glue
-    name: cola
-    split: test
-  text_field: sentence
+    path: wikitext
+    name: wikitext-103-v1
+    split: [test, 'train']
+  text_field: text
+
+
 
 actor:
   name: local_copy(module)
