--- a/backend/backend.yml
+++ b/backend/backend.yml
@@ -28,14 +28,14 @@ services:
       - /tmp/wholetensor:/tmp
       - /home/ubuntu/efs:/efs
 
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
 
-    # deploy:
-    #   resources:
-    #      reservations:
-    #        devices:
-    #        - driver: nvidia
-    #          count: 'all'
-    #          capabilities: [gpu]
 
     command: bash -c "cd /app; chmod +x /app/scripts/*;/app/scripts/startup.sh;"
 
