--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "backend/ipfsspec"]
 	path = backend/ipfsspec
 	url = https://github.com/commune-ai/ipfsspec.git
+[submodule "backend/diffusers"]
+	path = backend/diffusers
+	url = https://github.com/commune-ai/diffusers.git
