--- a/backend/backend.yml
+++ b/backend/backend.yml
@@ -22,6 +22,7 @@ services:
 
     volumes:
       - ./bittensor/bittensor:/app/bittensor/bittensor
+      - ./diffusers/src:/app/diffusers/src
       - ./commune:/app/commune
       - ./.bittensor:/root/.bittensor
       - ./scripts:/app/scripts
