--- a/ModuleFlow/package.json
+++ b/ModuleFlow/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@use-gesture/react": "^10.2.20",
     "axios": "^0.27.2",
     "dagre": "^0.8.5",
     "elkjs": "^0.8.2",
@@ -18,6 +19,7 @@
     "react-flow-renderer": "^10.3.8",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.2",
