deployed on avalanche

--- a/backend/commune/web3/network/module.yaml
+++ b/backend/commune/web3/network/module.yaml
@@ -1,6 +1,8 @@
 module: NetworkModule
 
-network: local.main.ganache
+# network: local.main.ganache
+
+network: avalanche.test.public
 # client: []
 networks:
   ethereum: 
