smart contract fixes

--- a/backend/commune/web3/network/module.yaml
+++ b/backend/commune/web3/network/module.yaml
@@ -1,8 +1,8 @@
 module: NetworkModule
 
-# network: local.main.ganache
+network: local.main
 
-network: avalanche.test.public
+# network: avalanche.test.public
 # client: []
 networks:
   ethereum: 
@@ -138,6 +138,13 @@ networks:
       explorer: https://api.polygonscan.com/api
       multicall2: "0xc8E51042792d7405184DfCa245F2d27B94D013b6"
     mumbai:
+      chainid: 80001
+      url: 
+        infura: https://polygon-mumbai.infura.io/v3/$WEB3_INFURA_PROJECT_ID
+      explorer: https://api-testnet.polygonscan.com/api
+      multicall2: "0x6842E0412AC1c00464dc48961330156a07268d14"
+
+    zkevm:
       chainid: 80001
       url: 
         infura: https://polygon-mumbai.infura.io/v3/$WEB3_INFURA_PROJECT_ID
