--- a/backend/commune/sandbox/module.yaml
+++ b/backend/commune/sandbox/module.yaml
@@ -1,3 +1,12 @@
 wallet: 
     name: const
     hotkey: Tiberius
+
+
+dataset:
+  module: huggingface.dataset
+  actor: {'refresh': False}
+  wrap: True
+
+
+
