--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,20 +1,4 @@
-# pull official base image
-FROM node:14.17.5-alpine
-
-# set working directory
+FROM node:16-alpine3.14
 WORKDIR /app
-
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-
-# install app dependencies
-COPY package.json ./
-COPY package-lock.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
-
-# add app
-COPY . ./
-
-# start app
-CMD ["npm", "start"]
+COPY package*.json ./
+RUN npm install
