--- a/backend/commune/sandbox/module.yaml
+++ b/backend/commune/sandbox/module.yaml
@@ -15,7 +15,7 @@ dataset:
 receptor_pool:
   module: bittensor.receptor_pool
   kwargs: {}
-  actor: {refresh: True}
+  actor: {refresh: False}
   wrap: False
   # wrap: True
 
