--- a/backend/commune/web3/contract/module.yaml
+++ b/backend/commune/web3/contract/module.yaml
@@ -1,10 +1,12 @@
 
 module: ContractManagerModule
 
+
 network:
   module: web3.network
   kwargs:
-    network: local.main
+
+    network: skale.test
   actor: False
   wrap: False
 
