--- a/backend/backend.yml
+++ b/backend/backend.yml
@@ -22,7 +22,10 @@ services:
 
     volumes:
       - ./bittensor/bittensor:/app/bittensor/bittensor
+      - ./bittensor/tests:/app/bittensor/tests
+
       - ./diffusers/src:/app/diffusers/src
+
       - ./commune:/app/commune
       - ./contracts:/app/contracts
       - ./interfaces:/app/interfaces
