sandbox bittensor things

--- a/backend/commune/sandbox/module.yaml
+++ b/backend/commune/sandbox/module.yaml
@@ -7,14 +7,13 @@ wallet:
 client: [local]
 
 dataset:
-  module: huggingface.dataset
+  module: dataset.huggingface
   actor: {refresh: False}
-  
   wrap: True
 
 
 receptor_pool:
-  module: bittensor.receptor_pool
+  module: commune.model.moe.receptor_pool
   kwargs: {}
   actor: False
   wrap: True
