--- a/backend/commune/model/transformer/module.yaml
+++ b/backend/commune/model/transformer/module.yaml
@@ -1,17 +1,17 @@
 module: 'TransformerModule'
 
 model:
-  module: transformers.EncoderDecoderModel
+  module: transformers.AutoModelForTokenClassification
   fn: from_pretrained
   kwargs: 
-    pretrained_model_name_or_path: google/roberta2roberta_L-24_discofuse
+    pretrained_model_name_or_path: distilbert-base-uncased
     # hf_token: local_copy(hf_token)
   
 tokenizer:
   module: transformers.AutoTokenizer
   fn: from_pretrained
   kwargs: 
-    pretrained_model_name_or_path: google/roberta2roberta_L-24_discofuse
+    pretrained_model_name_or_path: distilbert-base-uncased
     # hf_token: local_copy(hf_token)
   
 hf_token: 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
