--- a/backend/commune/model/transformer/module.yaml
+++ b/backend/commune/model/transformer/module.yaml
@@ -1,7 +1,7 @@
-module: 'TransformerModule'
+module: 'TransformerModel'
 
 model:
-  module: transformers.AutoModelForTokenClassification
+  module: transformers.AutoModel
   fn: from_pretrained
   kwargs: 
     pretrained_model_name_or_path: distilbert-base-uncased
