--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
+    "reactflow": "^11.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.8.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
