--- a/backend/commune/web3/contract/module.yaml
+++ b/backend/commune/web3/contract/module.yaml
@@ -5,7 +5,7 @@ module: ContractManagerModule
 network:
   module: web3.network
   kwargs:
-    network: skale.test
+    network: local.main
   actor: False
   wrap: False
 
