--- a/frontend/frontend.yml
+++ b/frontend/frontend.yml
@@ -2,7 +2,7 @@ version : "3.9"
 services:
   frontend :
     container_name: frontend
-    image : commune/moduleflow/frontend
+    image : commune/frontend
     build :
       context : ./
       dockerfile : Dockerfile
