added caching system in bittensor sampler

--- a/backend/commune/sandbox/module.yaml
+++ b/backend/commune/sandbox/module.yaml
@@ -7,7 +7,7 @@ wallet:
 client: [local]
 
 dataset:
-  module: dataset.huggingface
+  module: commune.dataset.huggingface
   actor: {refresh: False}
   wrap: True
 
