--- a/backend/backend.yml
+++ b/backend/backend.yml
@@ -22,6 +22,8 @@ services:
     volumes:
       - ./bittensor/bittensor:/app/bittensor/bittensor
       - ./bittensor/tests:/app/bittensor/tests
+
+      - ./ipfsspec:/app/ipfsspec
       - ./diffusers/src:/app/diffusers/src
       - ./commune:/app/commune
       - ./contracts:/app/contracts
