--- a/.gitmodules
+++ b/.gitmodules
@@ -10,13 +10,9 @@
 	path = backend/cubit
 	url = https://github.com/opentensor/cubit.git
 
-[submodule "backend/cortex"]
-	path = backend/cortex
-	url = https://github.com/commune-ai/cortex.git
-	branch = dataset
 [submodule "backend/ocean.py"]
 	path = backend/ocean.py
 	url = https://github.com/commune-ai/ocean.py
-[submodule "bitconnect/cortex"]
-	path = bitconnect/cortex
-	url = https://github.com/commune-ai/cortex.git
+[submodule "backend/cortex"]
+	path = backend/cortex
+	url = https://github.com/opentensor/cortex.git
